--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">ReTastyLog</string>
+    <string name="btn_list_restaurant_dialog">리스트 보기</string>
+
+    <string name="location_permission_required_title">위치 권한 필요</string>
+    <string name="location_permission_required_message">이 앱은 맵 기능을 사용하기 위해 위치 권한이 필요합니다. 위치 권한을 허용해 주세요.</string>
+    <string name="request_permission">권한 요청</string>
+    <string name="cancel">취소</string>
+    <string name="location_service_required_title">위치 서비스 필요</string>
+    <string name="location_service_required_message">이 앱은 위치 기반 서비스를 제공합니다. 위치 서비스를 활성화해주세요.</string>
+    <string name="go_to_settings">설정으로 이동</string>
+
 </resources>
